# Fillstellar

./: .env  .gitignore  CLAUDE.md  GODGAME_IMPROVEMENT_PLAN.md  LICENSE  README.md  WebSocket通信基盤要件定義.txt  build.bat  commit.bat  desktop.ini  index.html  main.js  main.ts  package-lock.json  package.json  prompt.md  rebuild-completion-report.md  start-dev.bat  style.css  tsconfig.json  アイデア.tx  ゲームロジックの移行-要件定義.txt  コミット.bat  プロジェクト進化ロードマップ.md  プロンプト.md  ポストプロセッシングエラー対応.md  マルチプレイヤー基盤と本番デプロイの最終調整計画書.md  体験性.txt  問題点洗い出し.txt  最適化とスケーリング.txt  最適化とスケーリング設計.txt  計画.txt  起動.bat
.claude/: settings.local.json
Rustバックエンド移行レポート/: WebSocket通信基盤要件定義.txt  day1.txt  day2.md  step3.md  ゲームロジックの移行-要件定義.txt  ゲームロジック移行実装レポート.md  マルチプレイヤー基盤と本番デプロイの最終調整計画書.md  最適化とスケーリング.txt  最適化とスケーリング設計.txt  計画.md
Rustバックエンド移行レポート/step4/: パフォーマンス最適化と運用準備.md
completed/: task-A.md  task-B.md  task-C.md  task-D.md  task-E.md  task-F.md
cosmic-gardener/: .gitignore  MIGRATION_LOG.md  Makefile  README.md  package-lock.json  package.json  refactoring.md  start-game.ps1
cosmic-gardener/backend/: .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .env.staging  .gitignore  .trivyignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.optimized  Makefile  PHASE2_IMPLEMENTATION.md  README.md  setup-and-test.ps1  test-methods.md  テスト方法.md
cosmic-gardener/backend/benches/: database_benchmark.rs  physics_benchmark.rs  websocket_benchmark.rs
cosmic-gardener/backend/config/: development.toml  production.toml  staging.toml
cosmic-gardener/backend/config/lightsail/: production.toml
cosmic-gardener/backend/docs/: API_Documentation_Guide.md  Cosmic_Gardener_API.postman_collection.json  Cosmic_Gardener_API.postman_environment.json  error-codes.md  error-handling-guide.md  testing-guide.md  websocket-protocol.md
cosmic-gardener/backend/migrations/: 001_initial.sql  002_game_state_tables.sql
cosmic-gardener/backend/scripts/: backup.sh  build-secure.sh  deploy-enhanced.sh  deploy-lightsail.sh  dev-entrypoint.sh  load_test.sh  schedule-backups.sh
cosmic-gardener/backend/scripts/seed/: dev_data.sql
cosmic-gardener/backend/src/: config.rs  error.rs  errors.rs  lib.rs  main.rs  main_documented.rs  websocket_handler.rs  websocket_messages.rs
cosmic-gardener/backend/src/application/services/: mod.rs
cosmic-gardener/backend/src/docs/: mod.rs
cosmic-gardener/backend/src/domain/: mod.rs
cosmic-gardener/backend/src/domain/entities/: celestial_body.rs
cosmic-gardener/backend/src/domain/value_objects/: mod.rs
cosmic-gardener/backend/src/errors/: README.md  codes.rs  conversions.rs  macros.rs  mod.rs  websocket.rs
cosmic-gardener/backend/src/game/: celestial_bodies.rs  concurrent_game_loop.rs  game_loop.rs  migration.rs  mod.rs  persistence.rs  physics.rs  physics_simd.rs  resources.rs  validation.rs
cosmic-gardener/backend/src/handlers/: auth.rs  auth_documented.rs  auth_updated.rs  game.rs  health.rs  metrics.rs  mod.rs  user.rs  websocket.rs
cosmic-gardener/backend/src/infrastructure/database/: mod.rs
cosmic-gardener/backend/src/middleware/: auth.rs  error_middleware.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
cosmic-gardener/backend/src/models/: auth.rs  documented.rs  game.rs  mod.rs  user.rs  websocket.rs
cosmic-gardener/backend/src/presentation/routes/: mod.rs
cosmic-gardener/backend/src/routes/: mod.rs
cosmic-gardener/backend/src/services/: backup.rs  cache.rs  database.rs  database_pool.rs  jwt.rs  logging.rs  metrics.rs  mod.rs  secrets.rs
cosmic-gardener/backend/src/services/websocket/: backpressure.rs  compression.rs  heartbeat.rs  mod.rs  optimization.rs  sync.rs
cosmic-gardener/backend/src/shared/: errors.rs  mod.rs
cosmic-gardener/backend/src/websocket/: broadcaster.rs  handler.rs  messages.rs  mod.rs  session.rs
cosmic-gardener/backend/tests/: error_tests.rs  integration_tests.rs  lib.rs  test_runner.rs  websocket_tests.rs
cosmic-gardener/backend/tests/api/: health.http
cosmic-gardener/backend/tests/integration/: auth_flow.rs  boundary_tests.rs  concurrency.rs  error_handling.rs  game_system_tests.rs  helpers.rs  mod.rs
cosmic-gardener/database/: 02_table_definitions.sql  03_index_design.sql  04_partitioning_strategy.md
cosmic-gardener/docs/: Python活用戦略プラン.md  Rust活用戦略プラン.md  auth-system-design.md  tech-stack-overview.md  プロンプト.txt  詳細なディレクトリ構造.txt
cosmic-gardener/frontend/: .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  DEPRECATED-UI-GUIDE.md  DEVELOPMENT.md  INCOMPLETE_FEATURES_TODO.md  MOBILE_DEBUG_GUIDE.md  README.md  balance-adjustments-summary.md  currency-shop-ideas.md  debug_resolution.html  debug_resolution_detailed.html  debug_starfield.html  gameplay-experience-problems.md  index.html  legacy-ui.css  main.js  main.ts  manifest.json  package.json  physics-config.json  physics.js  planet-exploration-system-proposal.md  (+18 more)
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  Python活用戦略プラン.md  RESOURCE_SYSTEM_CURRENT.md  auth-system-design.md  detailed-directory-structure.txt  development-operations-environment-plan.md  main-module-responsibilities.txt  prompt.txt  rust-strategy-plan.md  アーキテクチャ図.txt  技術選定根拠.txt
js/: achievements.ts  celestialBody.js  celestialBody.ts  events.js  events.ts  physics.js  saveload.js  saveload.ts  sound.ts  state.js  state.ts  statistics.js  statistics.ts  threeSetup.js  threeSetup.ts  timeline.js  ui.js  ui.ts  utils.js
planet/: index.html  package-lock.json  package.json  tsconfig.json
planet-exploration-babylon/: index.html  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
refactoring/: refactoring.md
アイデア/: README.md  UI_UX_改善アイデア.md  アクセシビリティ_インクルーシビティ.md  ゲームプレイメカニクス_拡張アイデア.md  シングルプレイヤー_アイデア.md  ナラティブ_ストーリーテリング.md  マネタイゼーション_ビジネスモデル.md  マルチプレイヤー_アイデア.md  リソースシステム_拡張アイデア.md  技術アーキテクチャ_拡張アイデア.md  未来展望_ロードマップ.md
アイドルゲーム性強化/: README.md  作業実績記録.md  実装順序と優先度.md
アンケート/: Fillstellar_アンケート_20250730_zephyr.csv  README.md  survey-app.html  survey-viewer.html
バックエンド by Rust/: 技術選定根拠.txt
確認用/: index.html  main.js
資料/: 技術スタック概要.md  開発・運用環境構築プラン.md
(+369 files in other folders)
