[package]
name = "cosmic-gardener-backend"
version = "0.1.0"
edition = "2021"
authors = ["Cosmic Gardener Team"]
description = "High-performance backend for Cosmic Gardener idle game"
license = "MIT"
repository = "https://github.com/cosmic-gardener/backend"

[dependencies]
# Web フレームワーク
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
actix-files = "0.6"
actix-session = "0.8"
actix-identity = "0.6"

# WebSocket サポート
actix-web-actors = "4.2"
tokio-tungstenite = "0.20"
actix = "0.13"

# データベース
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 認証・セキュリティ
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
secrecy = "0.8"
sha2 = "0.10"
rand = "0.8"

# API ドキュメント
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
protobuf = "3.4"
prost = "0.12"
prost-types = "0.12"
rmp-serde = "1.1"  # MessagePack

# 圧縮
lz4 = "1.24"
zstd = "0.13"
brotli = "3.4"

# 非同期処理
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
async-std = "1.12"

# HTTP クライアント
reqwest = { version = "0.11", features = ["json", "stream"] }

# ログ・監視
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# 数学・物理計算
nalgebra = "0.32"
num-traits = "0.2"
num-complex = "0.4"
rayon = "1.8"
ndarray = "0.15"
approx = "0.5"

# 空間データ構造
rstar = "0.11"
geo = "0.27"
geojson = "0.24"

# 圧縮・暗号化
zstd = "0.13"
flate2 = "1.0"
aes-gcm = "0.10"
ring = "0.17"

# 設定管理
config = "0.14"
dotenv = "0.15"
envy = "0.4"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# バリデーション
validator = { version = "0.16", features = ["derive"] }
garde = "0.17"

# ユーティリティ
itertools = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"
dashmap = "5.5"

# テスト
mockall = "0.11"
wiremock = "0.5"
proptest = "1.4"

# 開発ツール
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
cargo-watch = "8.4"
tokio-test = "0.4"
serial_test = "3.0"

# Build スクリプト
[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

# プロファイル設定
[profile.dev]
debug = true
opt-level = 0
incremental = true

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = false
opt-level = 3
lto = true

# Workspace設定（将来の拡張用）
[workspace]
members = [
    "crates/domain",
    "crates/infrastructure", 
    "crates/application",
    "crates/presentation",
    "crates/shared"
]

# 機能フラグ
[features]
default = ["postgres", "redis", "tracing"]
postgres = ["sqlx/postgres", "sea-orm/sqlx-postgres"]
redis = ["dep:redis"]
tracing = ["tracing-subscriber", "tracing-opentelemetry"]
physics-engine = ["nalgebra", "rstar"]
spatial-index = ["rstar", "geo"]
compression = ["zstd", "flate2"]
metrics = ["metrics-exporter-prometheus"]
dev-tools = ["cargo-watch"]

# Cargo メタデータ
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Binary設定
[[bin]]
name = "cosmic-gardener-server"
path = "src/main.rs"

[[bin]]
name = "cosmic-gardener-worker"
path = "src/worker.rs"

[[bin]]
name = "cosmic-gardener-migrate"
path = "src/migrate.rs"

# ベンチマーク
[[bench]]
name = "physics_benchmark"
harness = false

[[bench]]
name = "database_benchmark"
harness = false

# Example
[[example]]
name = "physics_simulation"
path = "examples/physics_simulation.rs"

[[example]]
name = "websocket_client"
path = "examples/websocket_client.rs"