[package]
name = "cosmic-gardener-backend"
version = "0.1.0"
edition = "2021"
authors = ["Cosmic Gardener Team"]
description = "High-performance backend for Cosmic Gardener idle game"
license = "MIT"

[dependencies]
# 数学・物理計算（最小限）
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-traits = "0.2"
rayon = "1.8"
approx = "0.5"
rstar = "0.11"

# 基本的なユーティリティ
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# 非同期処理
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# WebSocket & HTTP サーバー
actix-web = "4.4"
actix-ws = "0.2"
actix-cors = "0.6"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
log = "0.4"
tracing = "0.1"

# テスト
[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"

# 機能フラグ
[features]
default = []

# Binary設定
[[bin]]
name = "cosmic-gardener-server"
path = "src/main.rs"