[package]
name = "cosmic-gardener-backend"
version = "0.1.0"
edition = "2021"
authors = ["Cosmic Gardener Team"]
description = "High-performance backend for Cosmic Gardener idle game"
license = "MIT"

[dependencies]
# 数学・物理計算（最小限）
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-traits = "0.2"
rayon = "1.8"
approx = "0.5"
rstar = "0.11"

# 基本的なユーティリティ
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# 非同期処理
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# WebSocket & HTTP サーバー
actix-web = "4.4"
actix-ws = "0.2"
actix-cors = "0.6"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# データベース
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# キャッシュ
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 認証
jsonwebtoken = "9.0"
argon2 = "0.5"

# 圧縮
flate2 = "1.0"
lz4_flex = "0.11"

# メトリクス
prometheus = "0.13"

# SIMD最適化
wide = "0.7"
simdeez = "1.0"

# 高性能データ構造
dashmap = "5.5"

# 接続プール
deadpool-postgres = "0.10"

# 時間測定
instant = "0.1"

# 設定ファイル
toml = "0.8"

# システム情報
num_cpus = "1.16"

# HTTP クライアント
reqwest = { version = "0.11", features = ["json"] }

# テスト
[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

# 機能フラグ
[features]
default = []

# Binary設定
[[bin]]
name = "cosmic-gardener-server"
path = "src/main.rs"

# ベンチマーク設定
[[bench]]
name = "physics_benchmark"
harness = false

[[bench]]
name = "database_benchmark"
harness = false

[[bench]]
name = "websocket_benchmark"
harness = false